# FactBot

./: .gitignore  API_DOCUMENTATION.md  CAPTCHA_UI_UPDATE.md  CAPTCHA_UPDATE.md  Cargo.toml  DEVELOPER.md  Dioxus.toml  IMPROVEMENTS.md  README.md  USER_GUIDE.md  help.rs
assets/: tailwind.css
assets/styling/: main.css
docs/: DATABASE.md  Emulation浏览器指纹配置.md
examples/: database_demo.rs  emulation_demo.rs  generate_test_logs.rs  http_task_basic.rs  log_database_demo.rs  task_manager_logger_demo.rs  test_long_logs.rs
src/: api_server.rs  db.rs  lib.rs  main.rs
src/api/: health.rs  mod.rs
src/api/airline/: mod.rs
src/api/captcha/: mod.rs
src/api/register/: mod.rs
src/common/: error.rs  mod.rs
src/common/http_task/: README.md  config.rs  cookie_store.rs  interceptor.rs  ip_manager.rs  logger.rs  mod.rs  task_manager.rs  types.rs
src/components/: mod.rs  sidebar.rs
src/views/: airline.rs  blog.rs  captcha.rs  captcha_help.rs  config.rs  help.rs  home.rs  logs.rs  mod.rs  notice.rs
